--- a/views/customBI.hbs
+++ b/views/customBI.hbs
@@ -41,13 +41,13 @@
   </div>
   
   <div class="mainy">  
-   <form method="post" action="/customBI" >
+   <p></p><form method="post" action="/customBI" >
      <button id="filter" name="filter" class="btn btn-sm btn-outline-secondary" type="submit" >Submit Query </button>
      <p>Select search parameters from one or more columns below.  Then select "Submit Query".</p>
      <p></p>
      
-     <table class="table table-bordered table-dark">
-	<thead>
+     <table class="table table-bordered table-light">
+	<thead class="thead-light">
    	  <tr >
 	    <th>Table</th>
 	    <th>Attribute (optional)</th>
