--- a/public/starter-template.css
+++ b/public/starter-template.css
@@ -33,6 +33,9 @@ body {
    margin-right: 50px;
    color: rgb(38, 38, 37);
 }
+#info {
+   color: rgb(30, 144, 255);
+}
 #addAdmin {
    float: right;
    background-color: rgb(249, 249, 102);
