--- a/views/adminProfile.hbs
+++ b/views/adminProfile.hbs
@@ -3,11 +3,7 @@
   <head>
         <meta content="width=device-width, initial-scale=1" name="viewport">
          <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     	<link href="../starter-template.css" rel="stylesheet">
    </head>
   <body>
@@ -20,132 +16,54 @@
            <a class="nav-link active" href="/adminProfile">My Profile <span class="sr-only">(current)</span></a>
          </li>
          <li class="nav-item" >
-           <a class="nav-link" href="/accountsMain">Accounts <span class="sr-only">(current)</span></a>
+           <a class="nav-link" href="/getAllAdmins">Accounts <span class="sr-only">(current)</span></a>
          </li>
          <li class="nav-item" >
            <a class="nav-link" href="/businessIntelligence">Business Intelligence</a>
          </li>
        </ul>
      </div>
-    <a href="/logout" >Logout</a>
-  </nav>
+     <a href="/logout" >Logout</a>
+   </nav>
    <div class="sidebar">
        <h3 class="headingA">My Profile</h3>
-        <form action="/adminProfile" method="post">
-         {{#if edit}}
-           <a class="active">
-              <button type="submit" name="edit" value="edit" class="btn-link">Edit</button>
-           </a>
-           <a >
-	      <button type="submit" name="changePassword" value="changePassword" class="btn-link">Change Password</button>
-           </a>
-        {{else}}
-        {{#if admin}}
-	   <a>
-	      <button type="submit" name="edit" value="edit" class="btn-link">Edit</button>
-	   </a>
-           <a>
-	      <button type="submit" name="changePassword" value="changePassword" class="btn-link">Change Password</button>
-           </a>
-           {{/if}}
-        {{/if}}
-       
-        {{#if adminMain}}
-           <a >
-              <button type="submit" name="edit" value="edit" class="btn-link">Edit</button>
-           </a>
-           <a >
-	      <button type="submit" name="changePassword" value="changePassword" class="btn-link">Change Password</button>
-           </a>
-        {{/if}}
-        {{#if changePassword}}
-	   <a>
-	      <button type="submit" name="edit" value="edit" class="btn-link">Edit</button>
-	   </a>
-	   <a class="active">
-	      <button type="submit" name="changePassword" value="changePassword" class="btn-link">Change Password</button>
-	   </a>
-        {{/if}}
-       </form>
-  </div>
-  <div class="container-fluid" >
-    <div class="row">
-      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">  
-        <p></p> 
-       
-	{{#if changePassword}}
-   	 <form action="/adminProfile/password" method="post">
-   	    <div class="form-group">
-   	      <label>Old Password</label>
-   	      <input class="form-control" type="password" class="form-control" name="old">
-   	      <br>
-   	      <label>New Password</label>
-   	      <input class="form-control" type="password" class="form-control" name="new">
-   	      <br>
-   	      <button type="submit" id="filter">Change Password</button>
-   	    </div>
-   	    </form>
-	{{else}}
-	<div class="table-responsive-sm">
-               <table class="table table-sm">
-	 	       <thead class="thead-light"> 
-	 	       <tr>
-                          <th>ID</th>
-                          <Th>Name</th>
-                          <th>Email</th>
-                          <th>Last Login</th>
-                          <th>Login Attempts</th>
-                          <th>Created</th>
-                       {{#if edit}}<th>Action</th> {{/if}}
+       <a href="/adminProfileEdit" class="nav-link">Edit Profile</a>
+       <a href="/adminProfileChangePassword" class="nav-link">Change Password</a>
+   </div>
+  
+    <div class="container-fluid" >
+      <div class="row">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            <br />
+            <h4 id="info">{{{info}}}</h4>
+            <div class="table-responsive-sm">
+                <h4 id="addTitle">Welcome, {{admin.name}}.</h4><p></p>
+                <table class="table table-sm">
+                    <thead class="thead-light">
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Last Login</th>
+                            <th>Login Attempts</th>
+                            <th>Created</th>
                         </tr>
-                  </thead>
-                  <tbody>
-                      <tr>
-                      <div class="form-group">
-                        {{#if adminMain}}
-                         <form method="post" action="/adminProfile" >
-			  <td>{{adminMain.id}}</td>
-                          <td>{{adminMain.name}}</td>
-                  	  <td>{{adminMain.email}}</td>
-                          <td>{{convertDate adminMain.last_login}}</td>
-                          <td>{{adminMain.login_attempts}}</td>
-                          <td>{{convertDate adminMain.creation_time}}</td>
-                          </form>			</div>
-			{{/if}}
-
-                        <form method="post" action="/adminProfile" >
-                          {{#if edit}}
-                          <td>{{admin.id}}<input class="form-control" type="hidden" name="id" id="id" value="{{admin.id}}"></td>
-                            <td><input type="text" class="form-control" name="name" id="name" value="{{admin.name}}" ></td>
-			    <td><input type="text" class="form-control" name="email" id="email" value="{{admin.email}}" ></td>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>{{admin.id}}</td>
+                            <td>{{admin.name}}</td>
+                            <td>{{admin.email}}</td>
                             <td>{{convertDate admin.last_login}}</td>
                             <td>{{admin.login_attempts}}</td>
                             <td>{{convertDate admin.creation_time}}</td>
-                            <td><input class="form-control" id="Save" type="submit" name="Save" value="Save" > 
-
-                          {{else}}
-                          {{#if admin}}
-                          <td>{{admin.id}}</td>
-                          <td>{{admin.name}}</td>
-                  	  <td>{{admin.email}}</td>
-                          <td>{{convertDate admin.last_login}}</td>
-                          <td>{{admin.login_attempts}}</td>
-                          <td>{{convertDate admin.creation_time}}</td>
-                          </form>
-                          </div>
-			{{/if}}
-			{{/if}}  
-		      </tr>
-                   </tbody>
+                        </tr>
+                    </tbody>
                 </table>
-                {{/if}}
-              </div>
-             {{#if info}}
-	        <a id="info">{{{info}}}</a>
-             {{/if}}
-          </main>
-        </div>
+            </div>
+        </main>
       </div>
- </body>
+    </div>
+  </body>
 </html>
 
