--- a/views/businessIntelligence.hbs
+++ b/views/businessIntelligence.hbs
@@ -52,7 +52,7 @@
           <a class="nav-link" href="/adminProfile">My Profile <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item" >
-          <a class="nav-link" href="/accountsMain">Accounts <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/getAllAdmins">Accounts <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active" >
           <a class="nav-link" href="/businessIntelligence">Business Intelligence</a>
