--- a/views/customBI.hbs
+++ b/views/customBI.hbs
@@ -20,7 +20,7 @@
           <a class="nav-link" href="/adminProfile">My Profile <span class="sr-only">(</span></a>
         </li>
         <li class="nav-item" >
-          <a class="nav-link" href="/accountsMain">Accounts <span class="sr-only"></span></a>
+          <a class="nav-link" href="/getAllAdmins">Accounts <span class="sr-only"></span></a>
         </li>
         <li class="nav-item active" >
           <a class="nav-link" href="/businessIntelligence">Business Intelligence</a>
