--- a/views/adminProfile.hbs
+++ b/views/adminProfile.hbs
@@ -3,9 +3,19 @@
   <head>
         <meta content="width=device-width, initial-scale=1" name="viewport">
          <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    	<link href="../starter-template.css" rel="stylesheet">
-   </head>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    	<link href="/stylesheets/styleAdmin.css" rel="stylesheet">
+   <script>  
+
+   $(document).ready(function() {
+       setTimeout(function() {
+               $('#info').hide();
+       }, 6000);
+   });
+ 
+ </script>
+  </head>
   <body>
    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
      <a class="navbar-brand" href="#">Employee Recognition Awards System</a> 
@@ -19,7 +29,7 @@
            <a class="nav-link" href="/getAllAdmins">Accounts <span class="sr-only">(current)</span></a>
          </li>
          <li class="nav-item" >
-           <a class="nav-link" href="/businessIntelligence">Business Intelligence</a>
+           <a class="nav-link" href="/businessIntelligenceAdmin">Business Intelligence</a>
          </li>
        </ul>
      </div>
@@ -35,10 +45,11 @@
       <div class="row">
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
             <br />
-            <h4 id="info">{{{info}}}</h4>
             <div class="table-responsive-sm">
-                <h4 id="addTitle">Welcome, {{admin.name}}.</h4><p></p>
-                <table class="table table-sm">
+                <h5 id="addTitle">Welcome, {{admin.name}}.</h5><h5 id="info">{{{info}}}</h5>
+                <p></p>
+                  
+		 <table class="table table-sm">
                     <thead class="thead-light">
                         <tr>
                             <th>ID</th>
@@ -64,6 +75,8 @@
         </main>
       </div>
     </div>
-  </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+    </script>
+ </body>
 </html>
 
