--- a/views/adminProfileChangePassword.hbs
+++ b/views/adminProfileChangePassword.hbs
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <link href="../starter-template.css" rel="stylesheet">
+    <link href="../stylesheets/styleAdmin.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="/getAllAdmins">Accounts <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/businessIntelligence">Business Intelligence</a>
+                    <a class="nav-link" href="/businessIntelligenceAdmin">Business Intelligence</a>
                 </li>
             </ul>
         </div>
