--- a/views/editAdmins.hbs
+++ b/views/editAdmins.hbs
@@ -3,8 +3,9 @@
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link href="../starter-template.css" rel="stylesheet">
+    <link href="../stylesheets/styleAdmin.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
@@ -19,7 +20,7 @@
                     <a class="nav-link" href="/getAllAdmins">Accounts <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/businessIntelligence">Business Intelligence</a>
+                    <a class="nav-link" href="/businessIntelligenceAdmin">Business Intelligence</a>
                 </li>
             </ul>
         </div>
