--- a/views/getAllUsers.hbs
+++ b/views/getAllUsers.hbs
@@ -6,7 +6,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <link href="../starter-template.css" rel="stylesheet">
+    <link href="../stylesheets/styleAdmin.css" rel="stylesheet">
+    <script>
+        $(document).ready(function () {
+            setTimeout(function () {
+                $('#info').hide();
+            }, 6000);
+        });
+    </script>
 </head>
 <body overflow="hidden">
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
@@ -21,7 +28,7 @@
                     <a class="nav-link" href="/getAllAdmins">Accounts <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/businessIntelligence">BI Reports</a>
+                    <a class="nav-link" href="/businessIntelligenceAdmin">BI Reports</a>
                 </li>
             </ul>
         </div>
@@ -37,14 +44,14 @@
     <div class="container-fluid">
         <div class="row">
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-                <p></p>	 		
+                <p></p>
                 <a href="/addUser" id="filter" class="btn btn-sm btn-outline-secondary">+ Add </a>
-
                 <div class="table-responsive-sm">
-                    <h4 id="addTitle">User accounts</h4><p></p>
+                    <h4 id="addTitle">User accounts</h4>                       
+                    <h4 id="info">{{{info}}}</h4>
+                    <p></p>
                     <input class="form-control" id="myInput" type="text" placeholder="Search Users...">
                     <p></p>
-                    <h4 id="info">{{{info}}}</h4>
                     <table class="table table-sm">
                         <thead class="thead-light">
                             <tr>
@@ -63,7 +70,6 @@
                             {{#each users}}
                             <tr>
                                 <form method="post" action="/editUsers">
-
                                     <td>{{this.id}}<input type="hidden" name="id" id="id" value="{{this.id}}"></td>
                                     <td>{{this.name}}</td>
                                     <td>{{this.email}}</td>
@@ -77,11 +83,13 @@
                                         <input class="form-control" id="Delete" type="submit" name="Delete" value="Delete">
                                     </td>
                                 </form>
+
                             </tr>
                             {{/each}}
                         </tbody>
                     </table>
                 </div>
+
             </main>
         </div>
     </div>
