allow blank spaces customBI

--- a/views/addUser.hbs
+++ b/views/addUser.hbs
@@ -70,7 +70,7 @@
 
                                        <td><input class="form-control" id="save" type="submit" name="save" value="Save" /></td>
                                        <td>
-                                           <input class="form-control" id="cancel" type="submit" name="Cancel" value="Cancel" />
+                                           <input class="form-control" id="Cancel" type="submit" name="Cancel" value="Cancel" />
                                        </td>
                                    </tr>
                                </tbody>
