changed chart title

--- a/views/businessIntelligenceAward.hbs
+++ b/views/businessIntelligenceAward.hbs
@@ -42,7 +42,7 @@
                 <p></p><h4 id="addTitle">Awards</h4>
                 <div class="row1">
                     <div class="card border-light column1">
-                        <h5 class="chartHeader">Awards Created per Day</h5>
+                        <h5 class="chartHeader">Awards Created Per Day</h5>
                         <canvas id="myChart"></canvas>
                     </div>
                     <div class="card border-light column2">
