Make signature upload input required to avoid error

--- a/views/edit_profile.hbs
+++ b/views/edit_profile.hbs
@@ -41,7 +41,7 @@
 <div>
   <h3>Upload Signature Image</h3>
   <form action="/edit_profile/upload" enctype="multipart/form-data" method="post">
-		<input type="file" name="upload" />
+		<input required type="file" name="upload" />
     <br>
     <br>
     <button type="submit" class="btn btn-primary mb-2">Upload Image</button>
